--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="nav-container">
-    <a class="logo" href="/home.html">
+    <a class="logo" href="/index.html">
       <img src="/assets/logos/logo-wellins.png" alt="Wellins Logo" />
     </a>
 
