--- a/components/footer.html
+++ b/components/footer.html
@@ -28,13 +28,21 @@
       </div>
 
       <div class="footer-column">
-        <h4>Projects &amp; Media</h4>
+        <h4>Projects</h4>
         <ul>
-          <li><a href="/pages/Projects/alabama.html">Alabama Project</a></li>
-          <li><a href="/pages/Projects/georgia.html">Georgia Project</a></li>
-          <li><a href="/pages/Projects/ohio.html">Ohio Project</a></li>
-          <li><a href="/pages/Projects/texas.html">Texas Project</a></li>
-          <li><a href="/pages/PR Center/news.html">PR Center</a></li>
+          <li><a href="/pages/Projects/alabama.html">Alabama</a></li>
+          <li><a href="/pages/Projects/georgia.html">Georgia</a></li>
+          <li><a href="/pages/Projects/ohio.html">Ohio</a></li>
+          <li><a href="/pages/Projects/texas.html">Texas</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h4>PR Center</h4>
+        <ul>
+          <li><a href="/pages/PR Center/news.html">News</a></li>
+          <li><a href="/pages/PR Center/brochure.html">Brochure</a></li>
+          <li><a href="/pages/PR Center/prvideo.html">PR Videos</a></li>
         </ul>
       </div>
 
