--- a/components/navbar.html
+++ b/components/navbar.html
@@ -32,6 +32,23 @@
 
         <li class="dropdown">
           <div class="dropdown-label">
+            <a class="nav-link" href="/pages/Services/fire.html">Services</a>
+            <button class="submenu-toggle" type="button" aria-expanded="false" aria-label="Toggle Services submenu">
+              <span class="chevron" aria-hidden="true"></span>
+            </button>
+          </div>
+          <ul class="dropdown-menu">
+            <li><a href="/pages/Services/equipment.html">Equipment Installation</a></li>
+            <li><a href="/pages/Services/piping.html">Industrial Piping</a></li>
+            <li><a href="/pages/Services/piping.html">HVAC System</a></li>
+            <li><a href="/pages/Services/piping.html">Insulation & Jacketing</a></li>
+            <li><a href="/pages/Services/vessel.html">High-Pressure Vessels</a></li>
+            <li><a href="/pages/Services/fire.html">Fire Protection</a></li>
+          </ul>
+        </li>
+        
+        <li class="dropdown">
+          <div class="dropdown-label">
             <a class="nav-link" href="/pages/Projects/texas.html">Projects</a>
             <button class="submenu-toggle" type="button" aria-expanded="false" aria-label="Toggle Projects submenu">
               <span class="chevron" aria-hidden="true"></span>
@@ -50,21 +67,6 @@
 
         <li class="dropdown">
           <div class="dropdown-label">
-            <a class="nav-link" href="/pages/Services/fire.html">Services</a>
-            <button class="submenu-toggle" type="button" aria-expanded="false" aria-label="Toggle Services submenu">
-              <span class="chevron" aria-hidden="true"></span>
-            </button>
-          </div>
-          <ul class="dropdown-menu">
-            <li><a href="/pages/Services/fire.html">Fire Protection</a></li>
-            <li><a href="/pages/Services/equipment.html">Equipment Installation</a></li>
-            <li><a href="/pages/Services/piping.html">Mechanical & Industrial Piping</a></li>
-            <li><a href="/pages/Services/vessel.html">High-Pressure Vessels</a></li>
-          </ul>
-        </li>
-
-        <li class="dropdown">
-          <div class="dropdown-label">
             <a class="nav-link" href="/pages/PR Center/news.html">PR Center</a>
             <button class="submenu-toggle" type="button" aria-expanded="false" aria-label="Toggle PR Center submenu">
               <span class="chevron" aria-hidden="true"></span>
@@ -77,18 +79,11 @@
           </ul>
         </li>
 
-        <li class="dropdown">
-          <div class="dropdown-label">
-            <a class="nav-link" href="/pages/Contact/contact.html">Contact</a>
-            <button class="submenu-toggle" type="button" aria-expanded="false" aria-label="Toggle Contact submenu">
-              <span class="chevron" aria-hidden="true"></span>
-            </button>
-          </div>
-          <ul class="dropdown-menu">
-            <li><a href="/pages/Contact/contact.html">Contact Us</a></li>
-          </ul>
-        </li>
+        <li class="mobile-only"><a class="nav-link" href="/pages/Contact/contact.html">Contact</a></li>
       </ul>
     </nav>
+
+    <a class="contact-link" href="/pages/Contact/contact.html">Contact Us</a>
   </div>
 </header>
+
